# mcp-aktools

./: Dockerfile  pyproject.toml  run-akshare.fish
mcp_aktools/: __init__.py
