[project]
name = "mcp-aktools"
version = "0.1.15"
description = "MCP Server for stock and crypto"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["aktools", "akshare", "stock", "trading", "mcp", "llm"]
license = { text = "MIT" }
dependencies = [
    "akshare>=1.18.0",
    "cachetools>=6.2.0",
    "diskcache>=5.6.0",
    "fastmcp>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/aahl/mcp-aktools"
Repository = "https://github.com/aahl/mcp-aktools.git"

[project.scripts]
mcp-aktools = "mcp_aktools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
